--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
   google_fonts: ^6.2.1
+  firebase_core: ^3.9.0
+  cloud_firestore: ^5.6.0
 
 dev_dependencies:
   flutter_test:
