--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   firebase_core: ^3.9.0
   cloud_firestore: ^5.6.0
+  flutter_slidable: ^3.1.2
 
 dev_dependencies:
   flutter_test:
